gac_sb/objects/Proyecto_Concepto__c.object
<CustomObject>
    <fields>
        <fullName>ANO__c</fullName>
        <label>AÑO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_Time_Sheet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Annual Time Sheet</label>
        <referenceTo>Annual_time_sheet__c</referenceTo>
        <relationshipLabel>Proyectos / Conceptos</relationshipLabel>
        <relationshipName>Proyectos_Conceptos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mission__c</fullName>
        <label>Mission</label>
        <referenceTo>Mission__c</referenceTo>
        <relationshipLabel>Proyectos / Conceptos</relationshipLabel>
        <relationshipName>Proyectos_Conceptos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Planification_de_facturation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planification de facturation</label>
        <referenceTo>Prevision_de_facturation__c</referenceTo>
        <relationshipLabel>Planification de facturation</relationshipLabel>
        <relationshipName>Proyectos_Conceptos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_of_Proyecto_Concepto__c</fullName>
        <label>Type of Proyecto / Concepto</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Proyecto / Concepto</label>
    <nameField>
        <label>Proyecto / Concepto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proyectos / Conceptos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Proyecto_Concepto_ANO_Obligatoire</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(ANO__c,&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>ANO__c</errorDisplayField>
        <errorMessage>The year is needed</errorMessage>
    </validationRules>
</CustomObject>